--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,13 +2,12 @@
 
 name: CD
 
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
+# Controls when the workflow will run on:
+
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
